# blender-3d-plugin

./: .coverage  .gitignore  CHANGELOG.md  README.en.md  README.md  README.pl.md  README.ru.md  README.zh-Hant.md  SECURITY.md  addon.py  blender_manifest.toml  instrukcja.md  manifest.json  pyproject.toml  raport.md
.github/workflows/: ci.yml  release.yml
blender_mobile_3d/: __init__.py  version.py
blender_mobile_3d.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
blender_mobile_3d/adapters/: __init__.py  agents.py  blender_mcp.py
blender_mobile_3d/config/: __init__.py  defaults.py  loader.py  models.py  schema.py
blender_mobile_3d/core/: __init__.py  blender.py  errors.py  geometry.py  logging.py  manifests.py  metrics.py  paths.py  pipeline.py  scene.py  types.py  validation.py
blender_mobile_3d/exporters/: __init__.py  base.py
blender_mobile_3d/operators/: __init__.py  auto_rig.py  blender_ui.py  export.py  generate_lod.py  prepare_scene.py  register.py
docs/: RELEASE.md  RELEASE_MATRIX.md  installer-contract.md
docs/en/: full-docs.md
docs/pl/: full-docs.md
docs/ru/: full-docs.md
docs/zh-Hant/: full-docs.md
hermes-skill/: SKILL.md  instrukcja.md
hermes-skill/references/: formats.md  mobile-pipeline.md  rigging.md  troubleshooting.md
hermes-skill/scripts/: low_poly_lod.py  postprocess_manifest.py
hermes-skill/workflows/: godot_mobile.json  kotlin_mobile.json  ue5_mobile.json  unity_mobile.json
installers/npm/: LICENSE  README.md  eslint.config.js  package-lock.json  package.json
installers/npm/src/: argParsing.js  blenderDiscovery.js  blenderOps.js  download.js  exitCodes.js  glob.js  installer.js  main.js  manifest.js  output.js  zipSafety.js
installers/npm/src/commands/: doctor.js  help.js  install.js  list-blenders.js  uninstall.js  update.js  version.js
installers/npm/test/: blenderDiscovery.test.js  blenderHelperSync.test.js  commands.test.js  download.test.js  exitCodes.test.js  installer.test.js  manifest.test.js  zipSafety.test.js
installers/npm/test-support/: testHelpers.js  zipTestUtil.js
installers/python/: README.md  pyproject.toml
installers/python/src/blender_mobile_3d_installer/: blender_discovery.py  blender_ops.py  cli.py  commands.py  download.py  exit_codes.py  installer.py  manifest.py  zip_safety.py
installers/python/src/blender_mobile_3d_installer/data/: __init__.py  blender_helper.py  release-manifest.schema.json
installers/python/tests/: conftest.py  test_blender_discovery.py  test_blender_helper_sync.py  test_blender_ops.py  test_commands.py  test_download.py  test_exit_codes.py  test_installer_orchestration.py  test_manifest.py  test_zip_safety.py
plugin-core/: SKILL.md
plugin-core/references/: materials.md
plugin-core/scripts/: auto_rig.py  export_mobile.py  prepare_scene.py
plugin-core/workflows/: flutter_mobile.json
presets/: character.json  environment.json  fx.json  low_poly.json  ui_3d.json
schemas/: preset.schema.json
scripts/: blender_mobile_3d_cli.py  blender_regression.py  installer_e2e.py  release-requirements.txt  release_artifacts.py  release_e2e.py  smoke_test_blender.py  verify_addon_state.py  verify_release_versions.py
tests/: validate_workflows.py
tests/fixtures/installer/: fake_blender.py  manifest_schema_invalid.json  manifest_valid.json  unsafe_zip_entries.json
tests/unit/: test_cli.py  test_core_misc.py  test_loader.py  test_loader_presets.py  test_logging.py  test_manifests.py  test_models.py  test_paths.py  test_paths_extended.py  test_pipeline.py  test_release_artifacts.py  test_release_workflow.py  test_scene.py  test_schema.py  test_validation.py  test_validation_edges.py  test_validation_extended.py  test_verify_release_versions.py
tests/unit/blender/: conftest.py  test_operators.py
