[project]
name = "blender-mobile-3d"
version = "1.0.0"
description = "Secure installer and command-line manager for Blender Mobile 3D"
readme = "README.md"
requires-python = ">=3.11"
license = "GPL-2.0-only"
authors = [{name = "SSobol77"}]

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-cov", "ruff", "mypy"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "S"]

[tool.mypy]
python_version = "311"
strict = true

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
